feat: extract comment-service with all tests passing